# SevenZipCBindings

./: .gitignore  CMakeLists.txt  all_interfaces.md
base/CPP/: 7z.lib
base/CPP/7zip/: 7zip_gcc.mak  all_interfaces
base/CPP/7zip/Archive/7z/: 7zExtract.cpp
base/CPP/7zip/Bundles/Format7zF/: makefile
base/CPP/Common/: MyCom.h
src/: binding.cpp  binding.h  hardcoded_guids.cpp  wrappers.cpp  wrappers.h
